--- a/index.html
+++ b/index.html
@@ -12,6 +12,23 @@
         <input type="text" placeholder="enter city name" spellcheck="false" />
         <button><img src="images/search.png" /></button>
       </div>
+      <div class="weather">
+        <img src="images/rain.png" alt="" class="weather-icon" />
+        <h1 class="temp">22°c</h1>
+        <h2 class="city">Athens</h2>
+        <div class="details">
+          <div class="col">
+            <img src="images/humidity.png" />
+            <div><p class="humitity">50%</p></div>
+
+          </div>
+             <div class="col"></div>
+            <img src="images/wind.png" />
+            <div><p class="wind">15 km/h</p>
+            <p>Wind Speed</p></div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
